nullaway_error_2D1F6829-992D-47EA-95EC-BA045690AE57.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-tx/src/main/java/org/springframework/dao/DataAccessException.java:47: error: [NullAway] passing @Nullable parameter 'msg' where @NonNull is required
		super(msg);
		      ^
    (see http://t.uber.com/nullaway )
